# agent-tools-for-philosophy

./: .gitignore  LICENSE.md  README.md  _project.yaml  agent-tool-instructions-FOR-HUMANS-ONLY.md  agent-tool-instructions.md  cat-sources  cite2abs  cite2bib  cite2bib.sh  cite2md  cite2md.sh  cite2pdf  draft2keys  example-text.md  fd-sources  find-bib  find-bib.sh  find-bib.sh.abandoned  install.sh  instructions.md  missing-keys.txt  path2key  path2key.sh  rg-abstracts  rg-sources  run-tests.sh  tmp_rovodev_bib.bib  tmp_rovodev_index.jsonl
agent-tools/: find-bib
data/: copy_tex_sources.py
help-text/: cat-sources-help.txt  cat-sources-human.txt  cite2abs-help.txt  cite2abs-human.txt  cite2bib-help.txt  cite2bib-human.txt  cite2md-help.txt  cite2md-human.txt  cite2pdf-help.txt  cite2pdf-human.txt  draft2keys-help.txt  draft2keys-human.txt  fd-sources-help.txt  fd-sources-human.txt  find-bib-help.txt  find-bib-human.txt  path2key-help.txt  path2key-human.txt  rg-abstracts-help.txt  rg-abstracts-human.txt  rg-sources-help.txt  rg-sources-human.txt
python/: agent-tools-python-library-guide.md  pyproject.toml
python/src/: __init__.py
python/src/agent_tools/: __init__.py  bibliography.py  client.py
python/tests/: test_async.py  test_client_draft2keys.py  test_client_rg_sources.py  test_e2e.py  test_search_corpus.py
specs/: cat-sources-spec.md  cite2bib-spec.md  cite2md-spec.md  cite2pdf-spec.md  draft2keys-spec-proposed.md  draft2keys-spec.md  fd-sources-spec.md  find-bib-spec.md  human-help-flag.md  index-sources-spec-proposed.md  keys2cat-spec-proposed.md  (+7 more)
(+84 files in other folders)
