[project]
name = "agent-tools"
version = "0.1.0"
description = "Python bindings for agent-tools"
requires-python = ">=3.10"
dependencies = [
    "rapidfuzz>=3.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agent_tools"]

[dependency-groups]
dev = [
    "pytest>=9.0.1",
]
